<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name" translatable="false">Chaosflix</string>

	<string name="title">title</string>
	<string name="subtitle">subtitle</string>
	<string name="thumbnail">thumbnail</string>
	<string name="card">card</string>
	<string name="select_option">Select Media Option</string>
	<string name="search_title">Search</string>

	<string name="download">Download</string>
	<string name="bookmark">Bookmark</string>

	<string name="play">Play</string>
	<string name="delete">Delete</string>
	<string name="titleimage">TitleImage</string>
	<string name="update_database">Update Database</string>
	<string name="search_events">Search Events</string>
	<string name="search_talks">Search Talks</string>
	<string name="event_details_image_thumbnail_description">Thumbnail-picture for this event</string>

	<string name="bookmarks">Bookmarks</string>
	<string name="recordings">Recordings</string>
	<string name="livestreams">Livestreams</string>
	<string name="watchlist">Watchlist</string>
	<string name="continue_watching">Continue Watching</string>
	<string name="about">About</string>
	<string name="downloads">Downloads</string>

	<string name="preferences">Preferences</string>
	<string name="drawer_open">Drawer open</string>
	<string name="drawer_close">Drawer closed</string>
	<string name="about_title">Chaosflix</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="delete_local_file">Delete local File</string>
	<string name="about_voctocat"> The Vocotocat-Logo was designed by Sebastian Morr and is released under CC BY-NC-SA 4.0</string>
	<string name="showLibs">Libraries we use</string>
	<string name="about_chaosflix">About Chaosflix</string>
	<string name="chaosflix_licence">Chaosflix is released under MIT-License.</string>
	<string name="description">Chaosflix was developed, because the developer was annoyed
	that there was an app for Apple-TV but not Android- and Fire-TV. So now, after the
	TV-app there is also one for (android) phones and tablets. Enjoy!</string>
    <string name="settings">Settings</string>
    <string name="reload">Reload</string>
	<string name="no_livestreams">Currently no livestreams</string>
    <string name="watch_this">Watch this video from media.ccc.de</string>
    <string name="related_events">Related Events</string>
    <string name="about_github">Find the source on Github</string>
	<string name="about_beta">Become a Beta-Tester</string>
	<string name="about_twitter">Follow the developer on Twitter</string>
	<string name="about_playstore">Rate us on Google Play</string>
	<string name="select_stream">Select Stream</string>
	<string name="play_button">Play-Button</string>
	<string name="list_of_events">List of Events</string>
	<string name="delete_item">Delete Item</string>
    <string name="import_favorites">Import Favorites</string>
    <string name="import_activity_label">Fahrplan-Import</string>
    <string name="select_all">Select all</string>
    <string name="import_label">Bookmark</string>
	<string name="empty" />
</resources>