<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_new_navigation"
			android:icon="@drawable/chaosflix_icon"
			android:title="New Navigation"/>

		<item android:title="Content">
			<menu>
				<item
					android:id="@+id/nav_recordings"
					android:icon="@drawable/ic_video_archive"
					android:title="@string/recordings"/>
				<item
					android:id="@+id/nav_streams"
					android:icon="@drawable/ic_camera"
					android:title="@string/livestreams"/>
				<item
					android:id="@+id/nav_bookmarks"
					android:icon="@drawable/ic_bookmark"
					android:title="@string/bookmarks"/>
				<item
					android:id="@+id/nav_inprogress"
					android:icon="@android:drawable/ic_media_play"
					android:title="@string/continue_watching"/>
				<item
					android:id="@+id/nav_downloads"
					android:icon="@drawable/ic_download_dark"
					android:title="Downloads"/>
			</menu>
		</item>

		<item android:title="Settings">
			<menu>

				<item
					android:id="@+id/nav_about"
					android:icon="@android:drawable/ic_menu_info_details"
					android:title="@string/about"/>
				<item
					android:id="@+id/nav_preferences"
					android:icon="@android:drawable/ic_menu_preferences"
					android:title="@string/preferences"/>
			</menu>
		</item>
	</group>
</menu>