<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/action_play"
		android:icon="@drawable/ic_action_play"
		android:title="@string/play"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_share"
		android:icon="@drawable/ic_action_share"
		android:title="Share"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_bookmark"
		android:title="@string/bookmark"
		android:icon="@drawable/ic_bookmark_border"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_unbookmark"
		android:icon="@drawable/ic_bookmark"
		android:title="@string/remove_bookmark"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_download"
		android:title="@string/download"
		android:icon="@drawable/ic_download"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_delete_offline_item"
		android:title="@string/delete_local_file"
		android:icon="@drawable/ic_delete"
		android:visible="false"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_external_player"
		android:title="Play in external player"/>
</menu>