<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/subtitle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_text_margin"
                    android:layout_marginTop="@dimen/details_text_margin"
                    android:layout_marginRight="@dimen/details_text_margin"
                    android:text="@{event.subtitle}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="Subtitle" />

                <TextView
                    android:id="@+id/speaker_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_text_margin"
                    android:layout_marginTop="@dimen/details_text_margin"
                    android:layout_marginRight="@dimen/details_text_margin"
                    android:text="@{event.speakerString}"
                    tools:text="speakers, etc" />

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_text_margin"
                    android:layout_marginTop="@dimen/details_text_margin"
                    android:layout_marginRight="@dimen/details_text_margin"
                    android:layout_marginBottom="@dimen/details_text_margin"
                    android:text="@{event.extendedDescription}"
                    tools:text="description text" />

                <TextView
                    android:id="@+id/related_items_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_text_margin"
                    android:layout_marginTop="@dimen/details_text_margin"
                    android:layout_marginRight="@dimen/details_text_margin"
                    android:layout_marginBottom="@dimen/details_text_margin"
                    android:text="@string/related_events"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/related_items_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_event_cardview" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tag_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_header_height"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/CollapsableToolbarStyle"
                android:title="@{event.title.trim()}"
                app:expandedTitleGravity="top"
                app:toolbarId="@id/anim_toolbar"
                app:contentScrim="@color/primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap|enterAlwaysCollapsed"
                app:maxLines="3"
                app:popupTheme="@style/CollapsableToolbarPopupStyle"
                app:titleEnabled="true">

                <ImageView
                    android:id="@+id/thumb_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/appbar_header_height"
                    android:background="@drawable/default_background"
                    android:contentDescription="@string/event_details_image_thumbnail_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@drawable/scrim"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/anim_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/CollapsableToolbarStyle"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/CollapsableToolbarPopupStyle"
                    tools:title="Title" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/play_button"
            android:focusable="true"
            android:src="@drawable/ic_play"
            app:backgroundTint="@color/primary"
            app:fabSize="normal"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="bottom|right|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="event"
            type="de.nicidienase.chaosflix.common.mediadata.entities.recording.persistence.Event" />

        <variable
            name="viewModel"
            type="de.nicidienase.chaosflix.common.viewmodel.DetailsViewModel" />
    </data>

</layout>